Fixing Authentication issue